erDiagram
    User {
        string email PK
        string first_name
        string last_name
        string gender
        string mobile_number
        string password
        string image_url
        boolean is_verified
    }
    Location {
        int id PK
        string state
        int city_id FK
        string postal_code
        string user_email FK
    }
    City {
        int id PK
        string name
        int district_id FK
    }
    District {
        int id PK
        string name
        int province_id FK
    }
    Province {
        int id PK
        string name
    }
    Admin {
        string email PK
        string mobile_number
        string password
        string image_url
    }
    Employee {
        int id PK
        string name
        int employee_role_id FK
        string image_url
        string password
        boolean status
    }
    EmployeeRole {
        int id PK
        string name
    }
    Product {
        int id PK
        string title
        string description
        float price
        int category_id
        float ratings
        boolean is_available
        datetime created_at
        datetime updated_at
    }
    ProductImage {
        int id PK
        int product_id FK
        string image_url
    }
    CustomerReview {
        int id PK
        string user_email FK
        string message
        float rating
        int product_id FK
    }
    Order {
        int id PK
        string user_email FK
        int product_id FK
        int quantity
        float total_price
        string status
        datetime created_at
    }

    User ||--o{ Location : has
    City ||--o{ Location : contains
    District ||--o{ City : contains
    Province ||--o{ District : contains
    EmployeeRole ||--o{ Employee : has
    Product ||--o{ ProductImage : has
    User ||--o{ CustomerReview : makes
    Product ||--o{ CustomerReview : receives
    User ||--o{ Order : places
    Product ||--o{ Order : includes
